# watch-exams

./: .gitignore  .pre-commit-config.yaml  README.md  ReadMe.md  fetch_notification.py  justfile  main.py  package-list.txt  pyproject.toml  util.py
watch_exams/: __main__.py  display.py  fetch.py  fetch_notification.py  save.py  util.py
