[tool.poetry]
name = "watch-exams"
version = "1.0.1"
description = "监视“学生考试安排”。"
authors = ["Y.D.X. <73375426+YDX-2147483647@users.noreply.github.com>"]
readme = "ReadMe.md"
packages = [{include = "watch_exams"}]

[tool.poetry.scripts]
watch_exams = 'watch_exams.__main__:main'

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
dingding = "^0.6.2"
requests = "^2.28.1"
lxml = "^4.9.2"
polars = "^0.16.1"
xlsx2csv = "^0.8.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.250"
mypy = "^0.991"
types-requests = "^2.28.11.8"
types-beautifulsoup4 = "^4.11.6.5"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
