[tool.poetry]
name = "watch-exams"
version = "1.0.2"
description = "监视“学生考试安排”。"
authors = ["Y.D.X. <73375426+YDX-2147483647@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "watch_exams" }]

[tool.poetry.scripts]
watch_exams = 'watch_exams.__main__:main'

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
dingding = "^0.6.2"
requests = "^2.28.1"
lxml = "^4.9.2"
polars = "^0.16.1"
xlsx2csv = "^0.8.1"
tzdata = "^2023.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
types-requests = "^2.28.11.8"
types-beautifulsoup4 = "^4.11.6.5"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PL",  # Pylint
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "FA",  # flake8-future-annotations
    "PYI", # flake8-pyi
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PGH", # pygrep-hooks
    "TRY", # tryceratops
    "ERA", # eradicate
]
ignore = [
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN101", # missing-type-self
]

[tool.mypy]
ignore_missing_imports = true
